1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* simtoolsgui.h: Make CommonProbeDisplay protocol CREATABLE.
	Make SingleProbeDisplay protocol CREATABLE.
	Add SimpleProbeDisplay protocol and make it CREATABLE.

	* ProbeDisplayManager.m: Declare as extern 
	java_get_class_from_objc_object.
	([ProbeDisplayManager -_createDefaultProbeDisplayFor_:setWindowGeometryRecordName:]): Use java_get_class_from_objc_object instad of [anObject class].
	([ProbeDisplayManager -_createProbeDisplayFor_:setWindowGeometryRecordName:]): Use java_get_class_from_objc_object instad of [anObject class].

1999-07-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ActionCache.m ([ActionCache -sendActionOfType:type:]): Directly
	handle quit if stopped.  This is for the case that a model
	wants to hold back further -build{Objects,Action} work by
	waiting for user input within a call to setStateStopped.

1999-06-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbeWidget.m ([MessageProbeWidget -dynamic]): Avoid handling
	return type if there isn't one.

	* MessageProbeWidget.[hm] ([MessageProbeWidget -dynamic]): Return
	nothing (since we may be committing suicide, and tclObjc will be
	looking at the return value).

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbeWidget.m (printVal): Cast to unsigned, not unsigned char.
	Remove libffi hacks.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libsimtoolsgui_la_LDFLAGS): Substitute inst_LDFLAGS.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I$(top_builddir)/libobjc.

	* simtoolsgui.h: Include externvar.h.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtoolsgui.m (probeDisplayManager): Add externvardef.

	* ActionCache.m (Control, Probing, Spatial, InvalidActionType,